--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,13 @@
-sonar.projectKey=git-spec_example_app_fullstack_frontend
-sonar.organization=git-spec
+sonar.projectKey=jiangyinli0803_kochheld_frontend
+sonar.organization=jiangyinli0803
+
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=git-spec_example_app_fullstack_frontend
+#sonar.projectName=jiangyinli0803_kochheld_frontend
 #sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "" by "/" on Windows.
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./frontend/src
 sonar.coverage.exclusions=frontend/src/**
 
