--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.4.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
