--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,16 @@
             <version>4.18.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.1</version>
+        </dependency>
 
     </dependencies>
 
