--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 
-OpenAi_API_Key=${OpenAi_API_Key}
-MONGO_DB_URI=${MONGO_DB_URI}
+OpenAi_API_Key=${OPENAI_API_KEY}
+spring.data.mongodb.uri=${MONGO_DB_URI}
 
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_SECRET}
