--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -78,9 +78,15 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
             <version>3.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>6.3.3</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
