--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -2,3 +2,7 @@
 de.flapdoodle.mongodb.embedded.version=7.0.4
 
 OpenAi_API_Key=dummy-test-key
+
+spring.security.oauth2.client.registration.github.client-id=test-id
+spring.security.oauth2.client.registration.github.client-secret=test-secret
+spring.security.oauth2.client.registration.github.scope=none
