--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
             uses: actions/upload-artifact@v4
             with:
                 name: app-jar
-                path: backend/target/App.jar
+                path: backend/target/app.jar
 
   push-to-docker-hub:
     runs-on: ubuntu-latest
