--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.data.mongodb.uri=${MONGO_DB_URI}
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_SECRET}
 spring.security.oauth2.client.registration.github.scope=none
-spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.redirect-uri=https://kochheld.onrender.com/login/oauth2/code/github
